@@ -31,6 +31,7 @@
 
 class Recents;
 class URLHistory;
+class Filters;
 
 class Preferences {
 
@@ -417,6 +418,12 @@ public:
 
 	Recents * history_recents;
 	URLHistory * history_urls;
+
+
+    /* *******
+       Filters
+       ******* */
+	Filters * filters;
 };
 
 #endif
